* create log4j config * use proper username for talend db access * fix splunk index names and log paths for talend jobs * added helper script to handle inventory files with a +x perm * refactored loadtables install

--- a/ansible/roles/insight-loadtables/templates/config.xml
+++ b/ansible/roles/insight-loadtables/templates/config.xml
@@ -15,8 +15,8 @@
   <Target_Database
     gpfdist_addr="localhost:{{ gpfdist_port }}"
     Tar_Schema="{{ insight_schema_name }}"
-    Tar_Username="palette"
-    Tar_Password="palette123"
+    Tar_Username="{{ palette_etl_user }}"
+    Tar_Password="{{ palette_etl_user_pass }}"
 />
 <!-- target schema / source folder and gpfdist_addr goes hand-in-hand -->
 
